# phytium-opencv-assignment

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
